# Heston-FFT-Pricer

./: README.md  main.py  pyproject.toml
notebooks/: demo.ipynb
notebooks/.ipynb_checkpoints/: demo-checkpoint.ipynb
src/models/: heston.py
src/pricing/: fft.py  monte_carlo.py
src/visualization/: plots.py
tests/: test_pricing.py
