[project]
name = "heston-fft-pricer"
version = "0.1.0"
description = "Professional implementation of the Heston Model using FFT (Carr-Madan) and Monte Carlo methods."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "numba>=0.55.0",
    "pandas>=1.3.0",
    "matplotlib>=3.9.4",
    "pytest>=8.4.2",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"]
